--- a/Back-End/package.json
+++ b/Back-End/package.json
@@ -11,5 +11,8 @@
     "express": "~4.16.1",
     "morgan": "~1.9.1",
     "pg": "^8.7.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
